# mysecureshell

./: .cproject  .cvsignore  .gitignore  .gitmodules  .project  .readthedocs.yaml  .travis.yml  Dockerfile  FileSpec.c  FileSpec.h  LICENSE  Makefile  Makefile.in  README-en  README-fr  README.md  _sizeof.c  conf.c  conf.h  config.h.in  configure  configure.in  convert.c  defines.h  glob.h  hash.c  hash.h  install.sh  install.sh.in  ip.c  ip.h  locales_en  locales_fr  main.c  parsing.c  parsing.h  prog.c  prog.h  security.h  sftp_config  (+6 more)
.github/workflows/: ci.yml
Core/: FileSpec.c  FileSpec.h  conf.c  conf.h  convert.c  hash.c  hash.h  ip.c  ip.h  main.c  parsing.c  parsing.h  prog.c  prog.h  security.h  string.c  string.h  user.c  user.h
SftpAdmin/: Main.c
SftpMSS/: LICENSE.txt  README.txt
SftpServer/: Access.c  Access.h  Admin.c  Admin.h  Buffer.c  Buffer.h  Defines.h  Encode.c  Encode.h  Encoding.c  Encoding.h  FileSystem.c  FileSystem.h  FileSystemAcl.c  FileSystemAcl.h  GetUsersInfos.c  GetUsersInfos.h  Global.h  Handle.c  Handle.h  Log.c  Log.h  Send.c  Send.h  Sftp.c  Sftp.h  SftpExt.c  SftpExt.h  SftpServer.c  SftpServer.h  SftpWho.c  SftpWho.h  Stats.c  Stats.h  Util.c  Util.h
SftpState/: Main.c
SftpWho/: Main.c
debian/: changelog  control  copyright  dirs  docs  init.d  mysecureshell.links  mysecureshell.manpages  postinst  postrm  preinst  prerm  rules  watch
deployment-tools/docker/: Dockerfile
deployment-tools/docker/centos/centos7/: Dockerfile
deployment-tools/docker/debian/unstable/: Dockerfile
deployment-tools/docker/debian/wheezy/: Dockerfile
deployment-tools/docker/dev/: Dockerfile
deployment-tools/docker/ubuntu/lucid/: Dockerfile
deployment-tools/vagrant/: Vagrantfile
doc/: Makefile
doc/scripts/: create_lang.sh
doc/source/: conf.py  configuration.rst  configuration_detailed.rst  configuration_overview.rst  configuration_usecases.rst  contribute.rst  faq.rst  index.rst  installation.rst  installation_centos_redhat.rst  installation_fedora.rst  installation_macosx.rst  installation_os_centos_redhat.rst  installation_os_debian.rst  installation_os_fedora.rst  installation_os_macosx.rst  installation_os_ubuntu.rst  installation_source.rst  installation_ubuntu.rst  introduction.rst  mysecureshell_description.rst  quick_try.rst  quick_try_docker.rst  quick_try_vagrant.rst  tp_others.rst  tp_others_advertising.rst  tp_others_munin.rst  tp_others_nagios.rst  usages.rst  usages_admin.rst  usages_user.rst
doc/source/_static/: theme_overrides.css
doc/source/_themes/: sphinx_rtd_theme
doc/source/tags/: tag_template
doc/source/tags/childs/: bypassglobaldownload.rst  bypassglobalupload.rst  callbackdownload.rst  callbackupload.rst  canchangerights.rst  canchangetime.rst  charset.rst  connectionmaxlife.rst  create_home.rst  defaultrights.rst  dirfakegroup.rst  dirfakemode.rst  dirfakeuser.rst  disableaccount.rst  disablemakedir.rst  disableoverwrite.rst  disablereaddir.rst  disablereadfile.rst  disableremovedir.rst  disableremovefile.rst  disablerename.rst  disablesetattribute.rst  disablestatsfs.rst  disablesymlink.rst  disablewritefile.rst  download.rst  expiredate.rst  forcegroup.rst  forcerights.rst  forceuser.rst  globaldownload.rst  globalupload.rst  hidenoaccess.rst  home.rst  idletimeout.rst  ignorehidden.rst  include.rst  isadmin.rst  issimpleadmin.rst  limitconnection.rst  (+17 more)
doc/source/tags/deprecated/: canremovedir.rst  canremovefile.rst  gmttime.rst  hidefiles.rst  pathallowfilter.rst  pathdenyfilter.rst
doc/source/tags/parents/: default.rst  filespec.rst  group.rst  iprange.rst  user.rst  virtualhost.rst
man/en/man8/: MySecureShell.8  mysecureshell.8  sftp-admin.8  sftp-kill.8  sftp-state.8  sftp-user.8  sftp-verif.8  sftp-who.8
man/fr/man8/: MySecureShell.8  sftp-admin.8  sftp-kill.8  sftp-state.8  sftp-user.8  sftp-verif.8  sftp-who.8
packaging/: create_package.sh  make_packages.py  vars
packaging/debian/unstable/: build.sh
packaging/debian/wheezy/: build.sh
tests/: README.txt  draft-ietf-secsh-filexfer-09.txt  draft-ietf-secsh-filexfer-extensions-00.txt  pom.xml  test_001_ConfigBackup.xml  test_100_ConfigStayAtHome.xml  test_101_OpenDir1.xml  test_101_OpenDir2.xml  test_150_Config.xml  test_151_ListDir.xml  test_152_Config.xml  test_153_ListDir.xml  test_190_ConfigInvalid.xml  test_191_ListDir.xml  test_299_FileSystem.xml  test_300_ConfigStayAtHome.xml  test_301_ListDir.xml  test_302_DownloadFileBinary.xml  test_303_DownloadFileText.xml  test_304_UploadFileBinary.xml  test_305_UploadFileText.xml  test_306_Rename.xml  test_307_CreateAndRemoveSymLink.xml  test_308_RealPath2.xml  test_309_CreateAndRemoveDir.xml  test_349_FileSystem.xml  test_350_ConfigVirtualChroot.xml  test_351_ListDir.xml  test_352_FileHashing.xml  test_353_RealPath.xml  test_354_ListDir_out_of_chroot.xml  test_355_SymLink_out_of_chroot.xml  test_356_OpenDir_symlink.xml  test_399_FileSystem.xml  test_400_ConfigStayAtHome.xml  test_401_ListDir.xml  test_402_StatFile.xml  test_408_RealPath.xml  test_409_CreateAndRemoveDir.xml  test_499_FileSystem.xml  (+13 more)
tests/docker-acl-test/: Dockerfile  README.md  run-test.sh
tests/src/main/java/mysecureshell/tests/: App.java
tests/src/main/java/mysecureshell/tests/protocol/: SshFxpClose.java  SshFxpExtFileHashing.java  SshFxpExtended.java  SshFxpInit.java  SshFxpMakeDir.java  SshFxpOpenDir.java  SshFxpOpenFile.java  SshFxpReadDir.java  SshFxpReadFile.java  SshFxpReadLink.java  SshFxpRealPath.java  SshFxpRemoveDir.java  SshFxpRemoveFile.java  SshFxpRename.java  SshFxpSetStatFile.java  SshFxpStatFile.java  SshFxpSymLink.java  SshFxpWriteFile.java
tests/src/main/java/mysecureshell/tests/utils/: AssertUtils.java  Command.java  FilesUtil.java  PFlags.java  RandomData.java  SftpConnection.java  (+3 more)
tests/src/test/java/mysecureshell/tests/: TestFiles.java  TestValgrind.java  TestValgrindResults.java
third-apps/munin/: munin-plugins-install.sh  mysecureshell  mysecureshell_bandwith  mysecureshell_users
third-apps/nagios/: check_mss_users
utils/: .cvsignore  sftp-kill  sftp-user  sftp-user.in  sftp-verif.in
(+35 files in other folders)
