#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([MySecureShell],[0.8b4],[teka2nerdman@sourceforge.net])
AC_CONFIG_HEADER(config.h)

# Checks for programs.
AC_PROG_CC
AC_PATH_PROG(SED, sed)

# Checks for libraries.
AC_GNU_SOURCE
#AC_CHECK_LIB([kvm], [kvm_open])
#AC_CHECK_LIB([efence], [malloc])
AC_CHECK_LIB([idn], [stringprep_convert])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T
AC_STRUCT_TM
AC_TYPE_SIGNAL
AC_SYS_LARGEFILE
AC_CHECK_SIZEOF(long)

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h stdlib.h string.h strings.h sys/param.h sys/socket.h unistd.h sys/statfs.h sys/param.h sys/mount.h])

test -e "/usr/include/linux/ext2_fs.h" && AC_DEFINE(HAVE_LINUX_EXT2_FS_H, 1, Etcdir)

# Checks for library functions.
AC_FUNC_CLOSEDIR_VOID
AC_FUNC_FORK
AC_FUNC_STAT
AC_CHECK_FUNCS([endgrent gethostbyaddr gethostbyname strcasecmp strchr strdup strerror strrchr strstr statfs])

#Help
AC_ARG_WITH(conffile,
	[  --with-conffile=xxx      Change config file (default: /etc/ssh/sftp_config)],
	[
		if test "x$withval" != "$no" ; then
		   MSS_CONF=$withval
		fi
        ])
AC_ARG_WITH(logfile,
	[  --with-logfile=xxx      Change log file (default: /var/log/sftp-server.log)],
	[
		if test "x$withval" != "$no" ; then
		   MSS_LOG=$withval
		fi
        ])
MSS_COLOR=no
AC_ARG_WITH(logcolor,
        [  --with-logcolor=xxx     Active color in log file (default: no)],
        [
		
                if test "x$withval" != "$no" ; then
		   MSS_COLOR=yes
                fi
        ])
AC_ARG_WITH(shutfile,
	[  --with-shutfile=xxx      Change shut file (default: /etc/sftp.shut)],
	[
		if test "x$withval" != "$no" ; then
		   MSS_SHUT=$withval
		fi
        ])


#Own defines
test "$prefix" = NONE && prefix=/
test -z "$BINDIR" && BINDIR="/usr/bin"
test -z "$MSS_LOG" && MSS_LOG="/var/log/sftp-server.log";
test -z "$MSS_CONF" && MSS_CONF="/etc/ssh/sftp_config";
test -z "$MSS_SHUT" && MSS_SHUT="/etc/sftp.shut";
MSS_UTF=$ac_cv_lib_idn_stringprep_convert

A=`eval echo ${sysconfdir}`
AC_SUBST(ETCDIR, "${A}")
AC_SUBST(BINDIR, "${BINDIR}")
AC_DEFINE_UNQUOTED(MSS_LOG, "${MSS_LOG}", Logdir)
AC_DEFINE_UNQUOTED(SHUTDOWN_FILE, "${MSS_SHUT}", Etcdir)
AC_DEFINE_UNQUOTED(CONFIG_FILE, "${MSS_CONF}", Etcdir)
AC_DEFINE(CONFIG_FILE2, "/etc/sshd/sftp_config", Etcdir)
AC_DEFINE_UNQUOTED(MSS_SFTPWHO, "${BINDIR}/sftp-who", Sftpwhodir)
test "$MSS_COLOR" = "yes" && AC_DEFINE_UNQUOTED(HAVE_LOG_IN_COLOR, ${MSS_COLOR}, Colorlog)
test -z "$HAVE_LIBKVM" && AC_DEFINE(HAVE_NOTHING, 1, Havenothing)

#End
AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([install.sh], [chmod +x install.sh])
AC_CONFIG_FILES([uninstaller.sh], [chmod +x uninstaller.sh])
AC_OUTPUT

A=`eval echo ${sysconfdir}`
echo ""
echo "MySecureShell has been configured with the following options:"
echo "          Log file: $MSS_LOG (color: $MSS_COLOR)"
echo "     User binaries: $BINDIR"
echo "     Shutdown file: $MSS_SHUT";
echo "Configuration file: $MSS_CONF"
echo ""
echo "Supported:"
echo "UTF-8 Encoding    : $MSS_UTF";
